force-app/main/default/objects/Price_List__c/fields/Pricing_Element__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Element</label>
    <referenceTo>Pricing_Element__c</referenceTo>
    <relationshipLabel>Prices List</relationshipLabel>
    <relationshipName>Prices_List</relationshipName>
    <type>Lookup</type>
</CustomField>