force-app/main/default/objects/Price_List__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Prices List</relationshipLabel>
    <relationshipName>Prices_List</relationshipName>
    <type>Lookup</type>
</CustomField>